bug fix on ios for the heading on full width blog

--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -244,9 +244,3 @@ h2 {
 		margin-bottom: 3rem;
 	}
 }
-
-textarea {
-	.comment-form & {
-		height: 150px;
-	}
-}
